# TagStudio-rusted

./: .gitignore  .prettierignore  .prettierrc  README.md  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
src/: app.html  app.pcss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: .gitignore  config.toml
src-tauri/.sqlx/: query-25ab6ecffbdb5b084d216080307b21262e34fa384961f027fa170f3a48f3ef81.json
src-tauri/migrations/: 20240505055352_init.sql
src-tauri/src/: main.rs
src-tauri/src/command/: greet.rs  library.rs  mod.rs
src/components/: Alerts.svelte  Controls.svelte  DetailsViewer.svelte  Greet.svelte  Navbar.svelte  Sidebar.svelte  SplashScreen.svelte
src/components/Charts/: Donut.svelte
src/components/icons/: ArrowNarrowLeft.svelte  ArrowNarrowRight.svelte  BoxArchive.svelte  CalendarDay.svelte  Cube.svelte  Grid.svelte  List.svelte  LocationPin.svelte  RefreshCWAlt3.svelte  SearchAlt2.svelte  Spinner.svelte  TSLogo.svelte
src/lib/: ApexChart.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/dashboard/: +layout.svelte  +page.svelte
